<resources>
    <string name="app_name">Gallery App</string>
    <string name="image_loaded">This is a random image.</string>
    <string name="loading_image">Loading Image…</string>
    <string name="image_load_failed">Image load failed : $1%s</string>
    <string name="add_image_from_network">Add Image</string>
    <string name="no_items">No items\nTry adding from the action above.</string>
    <string name="edit_item_title">Edit</string>
    <string name="delete_item_title">Delete</string>
    <string name="add_image_from_gallery">Add image from gallery</string>
    <string name="share_item_title">Share</string>
    <string name="add_image_from_camera">Add image from camera</string>
    <string name="refresh">Refresh</string>
    <string name="enter_image_dimensions">enter image dimensions</string>
    <string name="add_image">Add Image</string>
    <string name="fetching_random_image">Fetching random image...</string>
    <string name="choose_palette_colour">Choose palette colour</string>
    <string name="fetch_image">FETCH IMAGE</string>
    <string name="height">height</string>
    <string name="width">width</string>
    <string name="choose_labels">Choose labels</string>
    <string name="add">ADD</string>
    <string name="label">label</string>/>
</resources>